--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-redux": "^8.0.2",
     "redux-persist": "^6.0.0",
     "sass": "^1.54.9",
-    "tmi.js": "^1.8.5"
+    "tmi.js": "^1.8.5",
+    "twitch-auth": "^4.6.7",
+    "twitch-chat-client": "^4.6.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
